final version for Cloud BoF

--- a/presentations/2016-11-21-Cloud-BoF.md
+++ b/presentations/2016-11-21-Cloud-BoF.md
@@ -1,13 +1,13 @@
-% PB overview
+% PB demo
 % Cloud BoF@CSC
 % Olli Tourunen, 2016-11-21
 
 # Overview
 
-## Pouta Blueprints? Pebbles? Notebooks? What? 
+## Pebbles? Pouta Blueprints? Notebooks? What? 
 
-- we are in process of renaming Pouta Blueprints software to Pebbles
-- the name of our hosted service pb.csc.fi will also change, probably to notebooks.csc.fi
+- we are in process of renaming Pouta Blueprints software to *Pebbles*
+- the name of our hosted service pb.csc.fi will also change, probably to *notebooks.csc.fi*
 - in this presentation, I'll use 
     - PB for short for the software
     - pb.csc.fi for the service
@@ -15,7 +15,7 @@
 ## What is PB?
 
 - web interface to resources provisioned in the cloud
-- open source project hosted at [GitHub](https://github.com/CSC-IT-Center-for-Science/pouta-blueprints)
+- open source project hosted at [GitHub under CSC](https://github.com/CSC-IT-Center-for-Science/pouta-blueprints)
 - developed by CSC - IT Center for Science 
 - buzzwords: Docker, Angular, RESTful, Ansible, self service, SAML2, notebook
 
@@ -30,14 +30,14 @@
     - locally added by admin (via activation email)
     - based on SAML2 identity (HAKA here in Finland)
 
-## pb.csc.fi service
+## How to use it?
 
-- CSC runs a PB server at https://pb.csc.fi
-- we offer containerized RStudio and IPython/Jupyter notebooks
-- open to anyone with HAKA federated identity credentials
-- currently in public beta
-- deployed in cPouta
-- actively used by both external and internal pilot users (250 external users have tried it)
+- we run a PB server on cPouta at [https://pb.csc.fi](https://pb.csc.fi)
+    - serves containerized RStudio and IPython/Jupyter notebooks
+    - open to anyone with HAKA
+    - targeted at courses
+- anyone with cPouta access can deploy their own
+    - give students access to your cPouta projects without cPouta accounts 
 
 # Use case: Notebooks for a course on pb.csc.fi
 
@@ -51,12 +51,12 @@ version of the exercises I made for the course."
 
 - prepares a notebook for a lecture
     - the notebook can download more material when launched
-- points the students to https://pb.csc.fi
+- points the students to [https://pb.csc.fi](https://pb.csc.fi)
 
 ## The Student
 
 - receives a link to the system (and activation token if necessary)
-- opens a browser and logs in 
+- opens a browser and logs in
 - launches an instance of the course blueprint
 - learns something
 
@@ -64,10 +64,18 @@ version of the exercises I made for the course."
 
 # Upcoming features
 
+## Upcoming feature - summary
+
+- user groups
+- delegating blueprint creation to group owners
+- run instances on top of OpenShift
+- semi-persistent storage
+- move pb.csc.fi to production
+
 ## User grouping
 
 - currently no grouping of users, just a flat list with admin flag on or off
-- groups are useful for  
+- groups are useful for
     - giving access to private blueprints
     - creating global blacklists, whitelists
 
@@ -98,8 +106,6 @@ version of the exercises I made for the course."
     - warning mails sent before removing
 - heavy lifting done by OpenShift
 
-## PB service from pilot to production
-
 # Finally
 
 ## Summary
@@ -113,3 +119,15 @@ version of the exercises I made for the course."
 ## Thanks! 
 
 Questions, please!
+
+More info from the team:
+
+Aleksi Kallio
+
+Apurva Nandan
+
+Jyry Suvilehto
+
+Olli Tourunen
+
+
